# Enhanced-Word-Mover-Distance

./: README.md  demo.py  pyproject.toml  requirements.txt  setup.py  test_idf.py  test_wmd.py
wmd/: __init__.py  word_mover_distance.py
