[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wmd"
version = "0.1.0"
description = "Word Mover's Distance with N-Gram Support"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "sentence-transformers",
    "nltk"
]

[project.urls]
"Homepage" = "https://github.com/example/wmd"
